# openvelo-insight

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  run_server.py
app/: agent.py  api.py  app_types.py  assessment_engine.py  check_ollama.py  config.py  domain.py  forecast_service.py  main.py  models.py  narration.py  ollama_client.py  session_manager.py
app/data_sources/: __init__.py  base.py  factory.py  open_meteo_client.py  postgres_source.py
app/session_store/: __init__.py  base.py  memory.py  redis.py
static/: index.html
tests/: test_api.py  test_assessment_engine.py  test_assessment_timeline.py  test_check_ollama.py  test_config.py  test_data_source_factory.py  test_forecast_service.py  test_logging_utils.py  test_main.py  test_models.py  test_narration.py  test_ollama_client.py  test_open_meteo_client.py  test_preferences_alignment.py  test_session_manager.py  test_session_store_memory.py  test_session_store_redis.py  test_summary_builder.py  test_window_scoring.py
utils/: logging_utils.py
